// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MainContent tool group border SVG snapshots > should render SVG snapshot for a pending search dialog (google_web_search) 1`] = `
"
 ████ █    █  █ █   █ ████
 █  █ █    █  █ ██ ██ █  █
 ████ █    █  █ █ █ █ ████
 █    █    █  █ █   █ █  █
 █    ████ ████ █   █ ████

 PLUMB CLI v1.2.3

 Good morning — what are we building?


Tips for getting started:
1. Create PLUMB.md files to customize your interactions
2. /help for more information
3. Ask coding questions, edit code or run commands
4. Be specific for the best results

╭──────────────────────────────────────────────────────────────────────────────────────────────╮
│ ⊶  google_web_search                                                                         │
│                                                                                              │
│ Searching...                                                                                 │
╰──────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`MainContent tool group border SVG snapshots > should render SVG snapshot for a shell tool 1`] = `
"
 ████ █    █  █ █   █ ████
 █  █ █    █  █ ██ ██ █  █
 ████ █    █  █ █ █ █ ████
 █    █    █  █ █   █ █  █
 █    ████ ████ █   █ ████

 PLUMB CLI v1.2.3

 Good morning — what are we building?


Tips for getting started:
1. Create PLUMB.md files to customize your interactions
2. /help for more information
3. Ask coding questions, edit code or run commands
4. Be specific for the best results

╭──────────────────────────────────────────────────────────────────────────────────────────────╮
│ ⊶  run_shell_command                                                                         │
│                                                                                              │
│ Running command...                                                                           │
╰──────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`MainContent tool group border SVG snapshots > should render SVG snapshot for an empty slice following a search tool 1`] = `
"
 ████ █    █  █ █   █ ████
 █  █ █    █  █ ██ ██ █  █
 ████ █    █  █ █ █ █ ████
 █    █    █  █ █   █ █  █
 █    ████ ████ █   █ ████

 PLUMB CLI v1.2.3

 Good morning — what are we building?


Tips for getting started:
1. Create PLUMB.md files to customize your interactions
2. /help for more information
3. Ask coding questions, edit code or run commands
4. Be specific for the best results

╭──────────────────────────────────────────────────────────────────────────────────────────────╮
│ ⊶  google_web_search                                                                         │
│                                                                                              │
│ Searching...                                                                                 │
╰──────────────────────────────────────────────────────────────────────────────────────────────╯"
`;
